2007-05-28  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.18.5

2007-05-28  Elijah Newren  <newren gmail com>

        * NEWS: 2.18.3 release.

2007-05-28  Elijah Newren  <newren gmail com>

        * src/place.c (meta_window_place): do not auto-maximize windows
        larger than the workarea in only a single direction.  Fixes
        #419810.

2007-04-16  Elijah Newren  <newren gmail com>

	Prevent metacity from "forgetting" which machine a window is on.
	#418552

	* src/window.c (meta_window_new_with_attrs): reorder the property
	loading so that we know the wm_client_machine when we load the
	name of the window and can modify the window name accordingly.

2007-04-08  Thomas Thurman  <thomas@thurman.org.uk>

	* configure.in: post-release version bump to 2.18.3

2007-04-08  Arthur Taylor  <theycallhimart@gmail.com>

        * src/frames.c (meta_frames_apply_shapes): adjusted the rounded
          corners so that they fit nicely with the arcs around them.
	  Fixes #399373.

2007-04-04  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.18.2

2007-04-04  Elijah Newren  <newren gmail com>

        * NEWS: 2.18.1 release.

2007-04-04  Elijah Newren  <newren gmail com>

	* src/window.c (meta_window_move_resize_internal): send synthetic
	configurenotify events also in response to MapRequest events when
	the window has a frame and the application specifies PPosition or
	UPosition hints.  I believe they are already sent for all other
	cases.  Should fix #322840.  Fixes the testcase at least.  :)

2007-04-03  Elijah Newren  <newren gmail com>

	* src/keybindings.c (handle_panel_keybinding): turn mouse_mode off
	to prevent focus issues with the run application dialog.  Fixes
	#374752.

2007-04-03  Elijah Newren  <newren gmail com>

	Avoid some crashes when dragging windows partially offscreen.
	Possible (or at least partial) fix for #353513.
